--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
           <img src="https://www.img.in.th/images/390ff171af6554c6f29afbea2ccf19c7.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
           
-          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">ยินดีด้วยค่ะคุณได้รับเครดิตฟรี 100</p>
+          <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">กดแชร์ให้เพื่อน 10 คน รับเครดิตฟรีได้เลย!!</p>
           <div class="d-grid gap-2 col-10 mx-auto">
             <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">กดแชร์เลย</button>
           </div>
@@ -84,7 +84,7 @@
            "size": "xl",
            "align": "center",
            "gravity": "center",
-           "color": "#FF9900",
+           "color": "#FF0033",
            "action": {
              "type": "uri",
              "label": "action",
@@ -127,7 +127,7 @@
              "label": "สมัครรับเครดิตฟรี",
              "uri": "https://lin.ee/wCANMbS"
            },
-           "color": "#FF9900"
+           "color": "#FF0033"
          }
        ]
      }
@@ -152,7 +152,7 @@
            "wrap": true,
            "weight": "bold",
            "size": "xl",
-           "color": "#FF9900",
+           "color": "#FF0033",
            "action": {
              "type": "uri",
              "label": "action",
@@ -197,7 +197,7 @@
              "label": "สมัครรับโบนัส 100%",
              "uri": "https://lin.ee/wCANMbS"
            },
-           "color": "#FF9900"
+           "color": "#FF0033"
          }
        ]
      }
